[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std", "science"]
description = "Statically sized matrices for `no_std` applications"
documentation = "https://docs.rs/mat"
keywords = ["matrix"]
license = "MIT OR Apache-2.0"
name = "mat"
repository = "https://github.com/japaric/mat"
version = "0.2.0"

[dependencies]
generic-array = "0.11.0"

[workspace]
