[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "Procedural macros for the `mat` crate"
documentation = "https://docs.rs/mat-macros"
license = "MIT OR Apache-2.0"
name = "mat-macros"
repository = "https://github.com/japaric/mat"
version = "0.1.0"

[dependencies]
quote = "0.4.2"

[dependencies.syn]
version = "0.12.12"
features = ["full"]

[dependencies.proc-macro2]
features = ["nightly"]
version = "0.2.2"

[lib]
proc-macro = true
