[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "Procedural macros for the `mat` crate"
documentation = "https://docs.rs/mat-macros"
license = "MIT OR Apache-2.0"
name = "mat-macros"
repository = "https://github.com/japaric/mat"
version = "0.1.1"

[dependencies]
quote = "0.5.1"

[dependencies.syn]
version = "0.13.1"
features = ["full"]

[dependencies.proc-macro2]
features = ["nightly"]
version = "0.3.6"

[lib]
proc-macro = true
